--- a/setup.cfg
+++ b/setup.cfg
@@ -23,7 +23,7 @@ extend-exclude =
   .venv
 
 # We only run `wemake-python-styleguide` with `flake8`:
-select = WPS E999
+select = WPS, E999
 
 extend-ignore =
   # Found string constant over-use
@@ -35,21 +35,20 @@ per-file-ignores =
   swo_aws_extension/apps.py: WPS300
   swo_aws_extension/aws/client.py: WPS111 WPS210 WPS214 WPS229 WPS301 WPS338 WPS463
   swo_aws_extension/aws/config.py: WPS121 WPS122 WPS214 WPS338 WPS420 WPS432
-  swo_aws_extension/aws/errors.py: WPS110 WPS111 WPS225 WPS231 WPS237 WPS238 WPS301 WPS328 WPS430 WPS469 WPS505
-  swo_aws_extension/constants.py: WPS110 WPS118 WPS202 WPS407
+  swo_aws_extension/aws/errors.py: WPS111 WPS225 WPS231 WPS237 WPS238 WPS301 WPS328 WPS430 WPS469 WPS505
+  swo_aws_extension/constants.py: WPS202 WPS407
   swo_aws_extension/default.py: WPS111 WPS407
   swo_aws_extension/extension.py: WPS111 WPS229
-  swo_aws_extension/file_builder/zip_builder.py: WPS110
   swo_aws_extension/flows/fulfillment/__init__.py: WPS412
   swo_aws_extension/flows/fulfillment/base.py: WPS210 WPS213 WPS221 WPS231 WPS232 WPS400
   swo_aws_extension/flows/fulfillment/pipelines.py: WPS235
   swo_aws_extension/flows/jobs/billing_journal/line_processors/base_processor.py: WPS214
-  swo_aws_extension/flows/jobs/billing_journal/billing_journal_generator.py: WPS110 WPS111 WPS118 WPS201 WPS204 WPS205 WPS210 WPS211 WPS213 WPS214 WPS220 WPS221 WPS229 WPS230 WPS231 WPS235 WPS237 WPS238 WPS338 WPS414 WPS432 WPS504 WPS529 WPS602
-  swo_aws_extension/flows/jobs/billing_journal/models.py: WPS110 WPS115 WPS202 WPS336
+  swo_aws_extension/flows/jobs/billing_journal/billing_journal_generator.py: WPS111 WPS201 WPS204 WPS205 WPS210 WPS211 WPS213 WPS214 WPS220 WPS221 WPS229 WPS230 WPS231 WPS235 WPS237 WPS238 WPS338 WPS414 WPS432 WPS504 WPS529 WPS602
+  swo_aws_extension/flows/jobs/billing_journal/models.py: WPS115 WPS202 WPS336
   swo_aws_extension/flows/jobs/billing_journal/invoice_details.py: WPS211
   swo_aws_extension/flows/jobs/pool_notifications.py: WPS210 WPS231 WPS232 WPS426 WPS504 WPS529
   swo_aws_extension/flows/jobs/process_aws_invitations.py: WPS210 WPS229 WPS432
-  swo_aws_extension/flows/jobs/synchronize_agreements.py: WPS110 WPS111 WPS204 WPS210 WPS213 WPS221 WPS229 WPS231 WPS232 WPS327 WPS426
+  swo_aws_extension/flows/jobs/synchronize_agreements.py: WPS111 WPS204 WPS210 WPS213 WPS221 WPS229 WPS231 WPS232 WPS327 WPS426
   swo_aws_extension/flows/order.py: WPS111 WPS202 WPS214 WPS235 WPS237 WPS336 WPS338
   swo_aws_extension/flows/steps/__init__.py: WPS410 WPS412
   swo_aws_extension/flows/steps/assign_mpa.py: WPS111 WPS204 WPS210 WPS213 WPS229 WPS237 WPS338 WPS602
@@ -58,29 +57,23 @@ per-file-ignores =
   swo_aws_extension/flows/steps/create_subscription.py: WPS210
   swo_aws_extension/flows/steps/invitation_links.py: WPS111 WPS210 WPS213 WPS221 WPS229 WPS231 WPS307 WPS338 WPS504 WPS529
   swo_aws_extension/flows/steps/register_transfered_mpa_airtable.py: WPS338
-  swo_aws_extension/flows/steps/service_crm_steps.py: WPS118 WPS202 WPS235 WPS617
-  swo_aws_extension/flows/steps/setup_context.py: WPS118 WPS204 WPS213 WPS338 WPS504
-  swo_aws_extension/flows/steps/validate.py: WPS118 WPS213 WPS504
+  swo_aws_extension/flows/steps/service_crm_steps.py: WPS202 WPS235 WPS617
+  swo_aws_extension/flows/steps/setup_context.py: WPS204 WPS213 WPS338 WPS504
+  swo_aws_extension/flows/steps/validate.py: WPS213 WPS504
   swo_aws_extension/flows/template.py: WPS212 WPS231 WPS232 WPS602
   swo_aws_extension/flows/validation/__init__.py: WPS412
   swo_aws_extension/flows/validation/base.py: WPS229 WPS231 WPS420 WPS504
-  swo_aws_extension/flows/validation/purchase.py: WPS110 WPS202 WPS204 WPS235
-  swo_aws_extension/flows/validation/steps.py: WPS110
-  swo_aws_extension/management/commands/check_pool_accounts_notifications.py: WPS110
-  swo_aws_extension/management/commands/generate_billing_journals.py: WPS110 WPS111 WPS210 WPS231 WPS237 WPS238 WPS432
-  swo_aws_extension/management/commands/order_process_aws_invitations.py: WPS110
-  swo_aws_extension/management/commands/refresh_ccp_openid_secret.py: WPS110
-  swo_aws_extension/management/commands/synchronize_agreements.py: WPS110
-  swo_aws_extension/management/commands/upload_journal.py: WPS110 WPS210 WPS213 WPS237
-  swo_aws_extension/management/commands/upload_journal_attachment.py: WPS110 WPS111 WPS210 WPS229 WPS338
+  swo_aws_extension/flows/validation/purchase.py: WPS202 WPS204 WPS235
+  swo_aws_extension/management/commands/generate_billing_journals.py: WPS111 WPS210 WPS231 WPS237 WPS238 WPS432
+  swo_aws_extension/management/commands/upload_journal.py: WPS210 WPS213 WPS237
+  swo_aws_extension/management/commands/upload_journal_attachment.py: WPS111 WPS210 WPS229 WPS338
   swo_aws_extension/management/commands_helpers/__init__.py: WPS410 WPS412
-  swo_aws_extension/management/commands_helpers/styled_print_command.py: WPS110
-  swo_aws_extension/notifications.py: WPS110 WPS202 WPS213 WPS229 WPS430
-  swo_aws_extension/parameters.py: WPS110 WPS111 WPS202 WPS204 WPS231
-  swo_aws_extension/swo_ccp/client.py: WPS110 WPS210 WPS214 WPS338 WPS432 WPS458 WPS504
+  swo_aws_extension/notifications.py: WPS202 WPS213 WPS229 WPS430
+  swo_aws_extension/parameters.py: WPS111 WPS202 WPS204 WPS231
+  swo_aws_extension/swo_ccp/client.py: WPS210 WPS214 WPS338 WPS432 WPS458 WPS504
   swo_aws_extension/swo_crm_service/__init__.py: WPS410 WPS412
-  swo_aws_extension/swo_crm_service/client.py: WPS110 WPS121 WPS122 WPS214 WPS221 WPS237 WPS338 WPS420 WPS432 WPS504
-  swo_aws_extension/swo_finops/client.py: WPS110 WPS111 WPS121 WPS122 WPS214 WPS420 WPS430 WPS432 WPS458
+  swo_aws_extension/swo_crm_service/client.py: WPS121 WPS122 WPS214 WPS221 WPS237 WPS338 WPS420 WPS432 WPS504
+  swo_aws_extension/swo_finops/client.py: WPS111 WPS121 WPS122 WPS214 WPS420 WPS430 WPS432 WPS458
   swo_mpt_api/__init__.py: WPS410 WPS412
   swo_mpt_api/billing/__init__.py: WPS410 WPS412
   swo_mpt_api/billing/journal_client.py: WPS110 WPS214 WPS221
@@ -88,54 +81,47 @@ per-file-ignores =
   swo_mpt_api/models/hints.py: WPS110 WPS115 WPS202 WPS453
   swo_rql/__init__.py: WPS111 WPS410 WPS412
   swo_rql/query_builder.py: WPS110 WPS111 WPS115 WPS210 WPS211 WPS214 WPS221 WPS231 WPS237 WPS478
-  tests/airtable/test_models.py: WPS110 WPS202 WPS218
-  tests/aws/test_client.py:WPS111 WPS202 WPS204 WPS210 WPS221 WPS237 WPS301 WPS432
-  tests/aws/test_config.py: WPS202 WPS110 WPS111 WPS118 WPS420
-  tests/aws/test_errors.py: WPS111 WPS202 WPS301 WPS432
+  tests/airtable/test_models.py: WPS202 WPS218
+  tests/aws/test_client.py: WPS202 WPS204
+  tests/aws/test_config.py: WPS202
+  tests/aws/test_errors.py: WPS202
   tests/django/settings.py: WPS407
-  tests/file_builder/test_zip_builder.py: WPS110
-  tests/flows/fulfillment/test_base.py: WPS114 WPS118 WPS202 WPS210 WPS211 WPS213 WPS432
-  tests/flows/fulfillment/test_pipelines.py: WPS118
+  tests/flows/fulfillment/test_base.py: WPS114 WPS202 WPS210 WPS211 WPS213 WPS432
   tests/flows/jobs/billing_journal/test_billing_journal_generator.py: WPS
-  tests/flows/jobs/test_pool_notifications.py: WPS118 WPS211 WPS218
-  tests/flows/jobs/test_process_aws_invitations.py: WPS110 WPS118 WPS202 WPS210 WPS211 WPS430 WPS432
-  tests/flows/jobs/test_synchronize_agreements.py: WPS118 WPS202 WPS204 WPS210 WPS211 WPS301 WPS420
-  tests/flows/steps/service_crm_steps/test_transfer_with_organization.py: WPS118 WPS202 WPS210
+  tests/flows/jobs/test_pool_notifications.py: WPS211 WPS218
+  tests/flows/jobs/test_process_aws_invitations.py:  WPS202 WPS210 WPS211 WPS430 WPS432
+  tests/flows/jobs/test_synchronize_agreements.py: WPS202 WPS204 WPS210 WPS211 WPS301 WPS420
+  tests/flows/steps/service_crm_steps/test_transfer_with_organization.py:  WPS202 WPS210
   tests/flows/steps/validate/test_purchase_transfer_without_organization.py: WPS111 WPS210 WPS432
-  tests/flows/steps/test_assign_mpa.py: WPS111 WPS118 WPS202 WPS204 WPS210 WPS211 WPS221 WPS237 WPS301 WPS430 WPS458
-  tests/flows/steps/test_ccp_onboard.py: WPS118 WPS210 WPS211 WPS432
-  tests/flows/steps/test_complete_order.py: WPS118 WPS210 WPS211
-  tests/flows/steps/test_create_linked_account.py: WPS118 WPS202 WPS204 WPS210 WPS211 WPS219 WPS221
-  tests/flows/steps/test_create_subscription.py: WPS118 WPS202 WPS204 WPS210 WPS211 WPS420
-  tests/flows/steps/test_finops.py: WPS110 WPS118 WPS202 WPS211
-  tests/flows/steps/test_invitation_links.py: WPS110 WPS118 WPS202 WPS210 WPS211 WPS430
-  tests/flows/steps/test_mpa_pre_configuration.py: WPS118 WPS210 WPS211
+  tests/flows/steps/test_assign_mpa.py: WPS111 WPS202 WPS204 WPS210 WPS211 WPS221 WPS237 WPS301 WPS430 WPS458
+  tests/flows/steps/test_ccp_onboard.py: WPS210 WPS211 WPS432
+  tests/flows/steps/test_complete_order.py: WPS210 WPS211
+  tests/flows/steps/test_create_linked_account.py: WPS202 WPS204 WPS210 WPS211 WPS219 WPS221
+  tests/flows/steps/test_create_subscription.py: WPS202 WPS204 WPS210 WPS211 WPS420
+  tests/flows/steps/test_finops.py: WPS202 WPS211
+  tests/flows/steps/test_invitation_links.py: WPS202 WPS210 WPS211 WPS430
+  tests/flows/steps/test_mpa_pre_configuration.py: WPS210 WPS211
   tests/flows/steps/test_register_transfered_mpa_airtable.py: WPS210 WPS211
-  tests/flows/steps/test_service_crm_steps.py: WPS111 WPS118 WPS202 WPS204 WPS210 WPS211 WPS218
-  tests/flows/steps/test_setup_context.py: WPS110 WPS118 WPS202 WPS204 WPS210 WPS211 WPS430 WPS432
+  tests/flows/steps/test_service_crm_steps.py: WPS110 WPS111 WPS118 WPS202 WPS204 WPS210 WPS211 WPS218
+  tests/flows/steps/test_setup_context.py: WPS202 WPS204 WPS210 WPS211 WPS430 WPS432
   tests/flows/steps/test_validate.py: WPS111 WPS210 WPS218 WPS432
-  tests/flows/validation/test_base.py: WPS110 WPS210 WPS432
-  tests/flows/validation/test_purchase.py: WPS110 WPS118 WPS202 WPS204 WPS210
-  tests/flows/validation/test_steps.py: WPS110 WPS210  tests/flows/test_template.py: WPS211
-  tests/flows/test_order.py: WPS118 WPS202 WPS204 WPS210 WPS218 WPS430
+  tests/flows/validation/test_base.py: WPS210 WPS432
+  tests/flows/validation/test_purchase.py: WPS202 WPS204 WPS210
+  tests/flows/validation/test_steps.py: WPS210
+  tests/flows/test_template.py: WPS211
+  tests/flows/test_order.py: WPS202 WPS204 WPS210 WPS218 WPS430
   tests/management/commands/test_generate_billing_journals.py: WPS202 WPS204 WPS432
-  tests/management/commands/test_synchronize_agreements.py: WPS118
-  tests/management/commands/test_upload_journal.py: WPS118
-  tests/management/commands/test_upload_journal_attachment.py: WPS110
-  tests/management/commands_helpers/test_styled_print_command.py: WPS110
-  tests/swo_ccp/test_client.py: WPS110 WPS118 WPS202 WPS211 WPS301
-  tests/swo_crm_service/test_client.py: WPS202 WPS204
-  tests/swo_crm_service/test_config.py:
-  tests/swo_finops/test_client.py: WPS118 WPS202 WPS204 WPS210 WPS432 WPS458
+  tests/swo_ccp/test_client.py: WPS202 WPS211 WPS301
+  tests/swo_crm_service/test_client.py: WPS118 WPS202 WPS204
+  tests/swo_finops/test_client.py: WPS202 WPS204 WPS210
   tests/swo_mpt_api/billing/test_billing_client.py: WPS110 WPS111 WPS202 WPS204 WPS210 WPS432
   tests/swo_mpt_api/billing/test_journal_client.py: WPS110 WPS111 WPS202 WPS204 WPS210 WPS432
   tests/swo_mpt_api/test_client.py: WPS110
   tests/swo_mpt_api/test_httpquery.py: WPS110 WPS116 WPS202 WPS221
   tests/swo_rql/test_query_builder.py: WPS110 WPS111 WPS122 WPS202 WPS204 WPS210 WPS218 WPS221 WPS347 WPS420 WPS431 WPS432 WPS473 WPS604
-  tests/conftest.py: WPS110 WPS111 WPS118 WPS201 WPS202 WPS210 WPS211 WPS227 WPS231 WPS237 WPS404 WPS421 WPS429 WPS430 WPS432 WPS504
+  tests/conftest.py: WPS110 WPS111 WPS118 WPS201 WPS202 WPS210 WPS211 WPS227 WPS231 WPS235 WPS237 WPS404 WPS421 WPS429 WPS430 WPS432 WPS504
   tests/test_apps.py: WPS111 WPS421
   tests/test_extension.py: WPS432
-  tests/test_initializer.py: WPS110 WPS111 WPS213 WPS218 WPS230 WPS431
+  tests/test_initializer.py: WPS111 WPS213 WPS218 WPS230 WPS431
   tests/test_notifications.py: WPS202 WPS211 WPS213 WPS221 WPS235 WPS462
-  tests/test_openid.py: WPS210
-  tests/test_parameters.py: WPS110 WPS118 WPS202 WPS210 WPS218 WPS235
+  tests/test_parameters.py: WPS202 WPS235
