--- a/helm/swo-extension-aws/values.yaml
+++ b/helm/swo-extension-aws/values.yaml
@@ -15,7 +15,7 @@ global:
   MsTeamsWebhookUrl: ZGVmYXVsdA==
   EmailNotificationsSender: default
   EmailNotificationsEnabled: "1"
-  CrmOAuthUrl: default
+  CrmOauthUrl: default
   CrmClientId: default
   CrmClientSecret: ZGVmYXVsdA==
   CrmAudience: default
@@ -29,13 +29,14 @@ global:
   CrmApiBaseUrl: default
   AwsOpenIdScope: default
   AwsRegion: us-east-1
-  AirTableBase: default
+  AirTableBases: default
   CcpKeyVaultSecretName: default
   ExtMinimumMpaThreshold: 1
   FfcOperationsSecret: ZGVmYXVsdA==
   FfcOperationsApiBase: default
   FfcOperationsSub: default
   MpNotifyCategories: "{}"
+  MpInitializer: swo_aws_extension.initializer.initialize
 
   replicaCountAPI: 1
   replicaCountWorker: 1
@@ -49,16 +50,12 @@ global:
     sync-agreements:
       schedule: ""
       command: synchronize_agreements
-    check-pool:
-      schedule: ""
-      command: check_pool_accounts_notifications
     ccp-secret:
       schedule: ""
       command: refresh_ccp_openid_secret
     generate-billing:
       schedule: ""
       command: generate_billing_journals
-
-
-
-
+    sync-finops-accounts:
+      schedule: ""
+      command: synchronize_finops_accounts
